finish proj2b test